--- a/contactus.html
+++ b/contactus.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Login</title>
+    <title>Contact page</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -76,107 +76,105 @@
     </div>
 
     <div class="container-fluid mt-3">
-      <div class="row px-3 py-4">
-        <div class="col-12 col-md-6 mt-4">
-          <p>Connect</p>
-          <h1>Login to Profiles</h1>
-          <p class="mt-4">
-            Welcome to Manjithaaza! Login to your smart card or company profile.
-          </p>
-          <div class="d-flex flex-column flex-sm-row">
-            <button
-              type="button"
-              class="btn btn-light px-4 py-2 me-2 mb-2 mb-sm-0"
-            >
-              Login
-            </button>
-            <button type="button" class="btn btn-outline-light px-4 py-2">
-              Sign Up
-            </button>
+      <div class="row hero-section align-items-center">
+        <div class="col-md-6" style="padding-left: 20px">
+          <div>
+            <h2>Get in Touch</h2>
+            <p>
+              We're here to help. Contact us for any inquiries, support, or
+              feedback.
+            </p>
           </div>
-          <div class="mt-5">
-            <h2>Access Your Profile Here</h2>
-            <p>Enter your credentials to access your profile.</p>
-            <div class="mb-3">
-              <input
-                type="email"
-                class="form-control"
-                id="exampleFormControlInput1"
-                placeholder="Email Address"
-                style="max-width: 100%; width: 400px"
-              />
-              <small class="mx-2"
-                >By logging in, you agree to our Terms and Conditions.</small
-              >
-            </div>
-          </div>
-        </div>
-        <div
-          class="col-12 col-md-6 d-flex justify-content-center align-items-center"
-        >
-          <!-- Add content here for the second column -->
-        </div>
-      </div>
-    </div>
-
-    <div class="container mt-5">
-      <div class="row">
-        <div class="col-12 col-md-6 content-center">
-          <h4>Discover the Smart Card Revolution</h4>
-          <small
-            >Unlock the power of smart digital accessories and services.</small
-          >
-        </div>
-        <div
-          class="col-12 col-md-6 d-flex align-items-center justify-content-md-end justify-content-center mt-3 mt-md-0"
-        >
-          <button
-            type="button"
-            class="btn btn-light px-4 py-2 me-2 flex-grow-0"
-          >
-            Sign up
-          </button>
-          <button
-            type="button"
-            class="btn btn-outline-light px-4 py-2 flex-grow-0"
-          >
-            Learn More
-          </button>
-        </div>
-      </div>
-    </div>
-
-    <div class="container mt-5">
-      <div class="row">
-        <div class="text-center">
-          <h5>Still have questions?</h5>
-          <p>Contact our support team for further assistance.</p>
-          <button
-            type="button"
-            class="btn btn-outline-light px-4 py-2 flex-grow-0"
-          >
-            Contact
-          </button>
         </div>
       </div>
     </div>
 
     <div class="container-fluid mt-5">
-      <div class="row" style="padding: 30px">
-        <div>
-          <small>Support</small>
-          <h4>Contact Support</h4>
-          <small
-            >If you need assistance with login issues, please contact our
-            support team.</small
+      <div class="row d-flex justify-content-center">
+        <div class="col-md-6 d-flex flex-column align-items-center">
+          <div class="text-center">
+            <small>Connect</small>
+            <h2 class="mt-3">Get in Touch</h2>
+            <p class="mt-3">
+              Have a question or need assistance? We're here to help!
+            </p>
+          </div>
+          <div class="mb-3" style="margin-top: 40px">
+            <label for="">Name</label>
+            <input
+              type="email"
+              class="form-control"
+              id="exampleFormControlInput1"
+              placeholder="Email Address"
+              style="
+                max-width: 100%;
+                width: 400px;
+                border-radius: 0;
+                background-color: #000315;
+                color: white;
+              "
+            />
+          </div>
+          <div class="mb-3">
+            <label for="">Name</label>
+            <input
+              type="email"
+              class="form-control"
+              id="exampleFormControlInput1"
+              placeholder="Email Address"
+              style="
+                max-width: 100%;
+                width: 400px;
+                border-radius: 0;
+                background-color: #000315;
+                color: white;
+              "
+            />
+          </div>
+          <div class="form-floating">
+            <textarea
+              class="form-control mb-3"
+              placeholder="Leave a comment here"
+              id="floatingTextarea2"
+              style="
+                height: 100px;
+                width: 400px;
+                background-color: #000315;
+                color: white;
+              "
+            ></textarea>
+            <label for="floatingTextarea2">Comments</label>
+          </div>
+          <div class="form-check">
+            <input
+              class="form-check-input"
+              type="checkbox"
+              value=""
+              id="flexCheckDefault"
+            />
+            <label class="form-check-label" for="flexCheckDefault">
+              I agree to the Terms
+            </label>
+          </div>
+          <button
+            type="button"
+            class="px-4 py-2 me-2 mb-2 mb-sm-0 mt-3"
+            style="background-color: #e7af41; color: white"
           >
+            Send
+          </button>
         </div>
       </div>
     </div>
     <div class="container-fluid mt-5">
       <div class="row align-items-center px-4 py-3">
-        <div class="col-12 col-md-5 mb-4 mb-md-0">
-          <div class="contact-details mb-4">
+        <div class="col-12 col-md-4 mb-4 mb-md-0">
+          <div>
+            <small style="color: #e7af41">Connect</small>
+            <h2>Contact Information</h2>
+            <p>Find our physical office locations and contact details below.</p>
+          </div>
+          <div class="contact-details mb-4 mt-5">
             <i class="bi bi-envelope-at-fill"></i>
             <p class="mt-2">Email</p>
             <p>Send us an email</p>
@@ -198,19 +196,41 @@
             </p>
           </div>
         </div>
-        <div class="col-12 col-md-7 d-flex justify-content-center justify-content-md-end">
+        <div
+          class="col-12 col-md-8 d-flex justify-content-center justify-content-md-end"
+        >
           <img
             src="./asset/img/about_pic1.png"
             class="img-fluid"
             alt="login Image"
-            style="max-width: 100%; height: auto; max-height: 450px;width: 90%;"
+            style="max-width: 100%; height: auto; max-height: 450px; width: 90%"
           />
         </div>
       </div>
     </div>
-    
 
-    <div class="container-fluid mt-3">
+    <div class="carousel-inner">
+      <!-- First item -->
+      <div class="carousel-item active">
+        <div class="container">
+          <div class="row">
+            <p class="text-center mt-5">Webflow</p>
+            <p class="text-center">
+              Manjithaaza's smart NFC cards have revolutionized the way I share
+              my contact information. It's convenient, efficient, and
+              eco-friendly.
+            </p>
+            <div class="text-center">
+              <i class="bi bi-person-circle" style="font-size: 2.5rem"></i>
+              <p class="mt-2" style="color:#e7af41;">John Doe</p>
+              <p>CEO, XYZ Company</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="container-fluid" style="margin-top: 40px;">
       <div class="row d-flex justify-content-center">
         <div style="text-align: center">
           <img src="./asset/img/navlogo.png" class="img-fluid" alt="nav imag" />
@@ -231,17 +251,13 @@
         </div>
       </div>
     </div>
-    <div class="container-fluid">
-      <div class="row d-flex justify-content-center" style="padding: 30px">
-        <hr
-          style="
-            height: 4px;
-            border-width: 0;
-            color: white;
-            background-color: white;
-          "
-        />
-      </div>
-    </div>
+    <hr
+      style="
+        height: 2px;
+        border-width: 0;
+        color: white;
+        background-color: white;
+      "
+    />
   </body>
 </html>
