--- a/index.html
+++ b/index.html
@@ -102,9 +102,10 @@
         </div>
       </div>
     </div>
+   
     <div class="container-fluid mt-4">
       <div class="row d-flex justify-content-center">
-        <div class="col-md-5">
+        <div class="col-md-5 animate-section">
           <p style="text-align: center">Revolutionize</p>
           <h1 style="text-align: center">
             Discover the Power of Smart NFC Cards
@@ -120,7 +121,7 @@
     </div>
     <div class="container-fluid mt-3">
       <div class="row d-flex justify-content-around">
-        <div class="about-us-card col-md-3 p-5">
+        <div class="animated-card about-us-card col-md-3 p-5">
           <i class="bi bi-box"></i>
           <h2>Effortless Communication Made Simple</h2>
           <h6>
@@ -128,7 +129,7 @@
             eliminating the need for traditional business cards.
           </h6>
         </div>
-        <div class="about-us-card col-md-3 p-5">
+        <div class="animated-card about-us-card col-md-3 p-5">
           <i class="bi bi-box"></i>
           <h2>Customize Your Smart NFC Card Design</h2>
           <h6>
@@ -136,7 +137,7 @@
             and personalized smart NFC card that represents your brand.
           </h6>
         </div>
-        <div class="about-us-card col-md-3 p-5">
+        <div class="animated-card about-us-card col-md-3 p-5">
           <i class="bi bi-box"></i>
           <h2>Environmentally Sustainable and Cost-Effective</h2>
           <h6>
@@ -148,7 +149,7 @@
     </div>
     <div class="container-fluid mt-4">
       <div class="row d-flex justify-content-center">
-        <div class="col-md-5">
+        <div class="col-md-5 animate-section">
           <p style="text-align: center">Empower</p>
           <h1 style="text-align: center">
             Unlock the Power of Smart NFC Cards
@@ -232,64 +233,64 @@
       </div>
     </div>
 
-    <div class="container-fluid mt-3">
-      <div class="row d-flex justify-content-between align-items-stretch">
-        <div class="col-md-6 p-5">
-          <div class="design-left  d-flex flex-column justify-content-center">
-            <p>Design</p>
-            <h2 class="design-title">
-              Create Your Own Unique <br />
-              Smart Card Design
-            </h2>
-            <h6 class="design-subtitle">
-              With our Smart Card online design feature, you can easily
-              personalize and customize your own smart card. Choose from a
-              variety of templates, colors, and fonts to create a unique
-              design that reflects your style and brand.
-            </h6>
-            <p>
-              <i class="bi bi-box me-2"></i> Easy-to-use Design Tools
-            </p>
-            <p>
-              <i class="bi bi-box me-2"></i> Endless Design Possibilities
-            </p>
-            <p>
-              <i class="bi bi-box me-2"></i> Express Your Personal or Brand Identity
-            </p>
-            <div class="d-flex align-items-center mt-3">
-              <button
-                type="button"
-                class="btn btn-outline-light pt-2 px-2"
-              >
-                Get Started
-              </button>
-              <p class="ms-3 mb-0">
-                Learn More
-                <i class="bi bi-caret-right"></i>
-              </p>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-6 p-5 d-flex align-items-center flex-grow-1">
-          <img
-            src="./asset/img/about_pic1.png"
-            class="img-fluid w-100"
-            alt="Hero Section Image"
-          />
+<div class="container-fluid mt-3">
+  <div class="row d-flex justify-content-between align-items-stretch">
+    <div class="col-md-6 p-5">
+      <div class="design-content d-flex flex-column justify-content-center">
+        <p class="design-text stagger-delay-1">Design</p>
+        <h2 class="design-text stagger-delay-2 design-title">
+          Create Your Own Unique <br />
+          Smart Card Design
+        </h2>
+        <h6 class="design-text stagger-delay-3 design-subtitle">
+          With our Smart Card online design feature, you can easily
+          personalize and customize your own smart card. Choose from a
+          variety of templates, colors, and fonts to create a unique
+          design that reflects your style and brand.
+        </h6>
+        <p class="design-text stagger-delay-4">
+          <i class="bi bi-box me-2"></i> Easy-to-use Design Tools
+        </p>
+        <p class="design-text stagger-delay-4">
+          <i class="bi bi-box me-2"></i> Endless Design Possibilities
+        </p>
+        <p class="design-text stagger-delay-4">
+          <i class="bi bi-box me-2"></i> Express Your Personal or Brand Identity
+        </p>
+        <div class="d-flex align-items-center mt-3">
+          <button
+            type="button"
+            class="btn btn-outline-light pt-2 px-2 animate-button stagger-delay-5"
+          >
+            Get Started
+          </button>
+          <p class="ms-3 mb-0 design-text stagger-delay-5">
+            Learn More
+            <i class="bi bi-caret-right"></i>
+          </p>
         </div>
       </div>
     </div>
+    <div class="col-md-6 p-5 d-flex align-items-center flex-grow-1">
+      <img
+        src="./asset/img/about_pic1.png"
+        class="img-fluid w-100 design-image"
+        alt="Hero Section Image"
+      />
+    </div>
+  </div>
+</div>
     
 
     <div class="container-fluid mt-3">
       <div class="row align-items-center" style="padding: 30px">
-        <div class="col-md-6" style="padding-left: 20px">
-          <h2 style="line-height: 45px">
+        <div class="col-md-6 design-content" style="padding-left: 20px">
+          <h2 style="line-height: 45px " class="design-text ">
             Choose the Perfect Smart Card Package for Your Needs
           </h2>
         </div>
 
-        <div class="col-md-6">
+        <div class="col-md-6 design-text ">
           <p style="line-height: 35px;padding-left: 30px;">
             At Manjithaaza, we offer a range of Smart Card packages to suit
             every requirement. Whether you're a professional looking to share
@@ -313,7 +314,7 @@
     </div>
 
     <!-- FAQ section -->
-    <div class="container-fluid mt-3">
+    <div class="container-fluid mt-3  faq-section">
       <div class="row align-items-center" style="padding: 30px">
         <div class="col-md-5" style="padding-left: 20px">
           <h1 class="faq-heading">FAQs</h1>
@@ -487,18 +488,18 @@
 
     <div class="container-fluid">
       <div class="row d-flex justify-content-between align-items-center">
-        <div class="col-6 p-5">
-          <h1>Discover the power of NFC</h1>
-          <p class="faq-paragraph">
+        <div class="design-content col-6 p-5">
+          <h1 class="design-text ">Discover the power of NFC</h1>
+          <p class="faq-paragraph design-text ">
             Experience seamless communication with our smart NFC cards
           </p>
-          <button type="button" class="btn btn-light me-2">Try</button>
-          <button type="button" class="btn btn-outline-light">Design</button>
+          <button type="button" class="animate-button btn btn-light me-2">Try</button>
+          <button type="button" class="animate-button btn btn-outline-light">Design</button>
         </div>
         <div class="col-5 p-5">
           <img
             src="./asset/img/about_pic1.png"
-            class="img-fluid w-100"
+            class="img-fluid w-100 design-image"
             alt="Hero Section Image"
           />
         </div>
@@ -506,7 +507,7 @@
     </div>
 
     <div class="container-fluid">
-      <div class="row">
+      <div class="row design-content">
         <div class="">
           <p class="text-center">Articles</p>
           <h3 class="text-center">Discover Valuable Resources Here</h3>
@@ -517,8 +518,8 @@
 
     <div class="container-fluid">
       <div class="row mb-5" style="padding:30px">
-        <div class="col-12 col-sm-6 col-md-4 col-lg-3"  style="padding-left: 20px">
-          <div class="card" style="width: 100%">
+        <div class="col-12 col-sm-6 col-md-4 col-lg-3 scale-up"  style="padding-left: 20px">
+          <div class="card hover-up" style="width: 100%">
             <img
               src="./asset/img/card.png"
               class="card-img-top"
@@ -539,8 +540,8 @@
             </div>
           </div>
         </div>
-        <div class="col-12 col-sm-6 col-md-4 col-lg-3">
-          <div class="card" style="width: 100%">
+        <div class="col-12 col-sm-6 col-md-4 col-lg-3 scale-up">
+          <div class="card hover-up" style="width: 100%">
             <img
               src="./asset/img/card.png"
               class="card-img-top"
@@ -561,8 +562,8 @@
             </div>
           </div>
         </div>
-        <div class="col-12 col-sm-6 col-md-4 col-lg-3">
-          <div class="card" style="width: 100%">
+        <div class="col-12 col-sm-6 col-md-4 col-lg-3 scale-up">
+          <div class="card hover-up" style="width: 100%">
             <img
               src="./asset/img/card.png"
               class="card-img-top"
@@ -583,8 +584,8 @@
             </div>
           </div>
         </div>
-        <div class="col-12 col-sm-6 col-md-4 col-lg-3">
-          <div class="card" style="width: 100%">
+        <div class="col-12 col-sm-6 col-md-4 col-lg-3 scale-up">
+          <div class="card hover-up" style="width: 100%">
             <img
               src="./asset/img/card.png"
               class="card-img-top"
@@ -619,4 +620,5 @@
    
     <hr style="height:2px;border-width:0;color:white;background-color:white">
   </body>
+ <script src="./js/transition.js"></script>
 </html>
