--- a/details2.html
+++ b/details2.html
@@ -329,5 +329,39 @@
         </div>
       </div>
     </div>
+    <!-- footer -->
+    <div class="container-fluid mt-3">
+      <div class="row d-flex justify-content-center">
+        <div style="text-align: center">
+          <img src="./asset/img/navlogo.png" class="img-fluid" alt="nav imag" />
+        </div>
+      </div>
+    </div>
+
+    <div class="container-fluid mt-3">
+      <div class="row d-flex justify-content-center">
+        <div class="col-md-7">
+          <div class="footer row mt-3 text-center text-md-start">
+            <div class="col-12 col-md footer-item mb-2 mb-md-0">About Us</div>
+            <div class="col-12 col-md footer-item mb-2 mb-md-0">Product</div>
+            <div class="col-12 col-md footer-item mb-2 mb-md-0">Service</div>
+            <div class="col-12 col-md footer-item mb-2 mb-md-0">Contact</div>
+            <div class="col-12 col-md footer-item mb-2 mb-md-0">FAQ</div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="container-fluid">
+      <div class="row d-flex justify-content-center" style="padding: 30px">
+        <hr
+          style="
+            height: 4px;
+            border-width: 0;
+            color: white;
+            background-color: white;
+          "
+        />
+      </div>
+    </div>
   </body>
 </html>
