--- a/service.html
+++ b/service.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>details page</title>
+    <title>Service page</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -27,7 +27,7 @@
       rel="stylesheet"
     />
     <!-- style sheet -->
-    <link rel="stylesheet" href="./css/details1.css" />
+    <link rel="stylesheet" href="./css/service.css" />
   </head>
   <body>
     <!-- nav bar -->
@@ -75,32 +75,96 @@
         </div>
       </nav>
     </div>
-    <!-- about us 1st section -->
-    <div class="container-fluid mt-3">
-      <div class="row hero-section align-items-center">
-        <div class="col-md-6" style="padding-left: 20px"></div>
-      </div>
-    </div>
-    <!-- details 1st section -->
-    <div class="container-fluid mt-4">
-      <div class="row d-flex justify-content-center">
-        <div class="col-md-7">
-          <p style="text-align: center">Innovative</p>
-          <h1 style="text-align: center">Prime Smart Card</h1>
-          <p style="text-align: center; line-height: 28px">
-            The basic Smart card with black and white print
-          </p>
-          <div style="text-align: center; line-height: 28px">
-            <button type="button" class="btn btn-light me-2">Simple</button>
-            <button type="button" class="btn btn-light me-2">Efficient</button>
-            <button type="button" class="btn btn-light me-2">
-              Cost-effective
-            </button>
+    <!-- service 1st section -->
+    <div>
+      <div class="container-fluid mt-3">
+        <div class="row hero-section align-items-center">
+          <div class="col-md-6" style="padding-left: 20px">
+            <h6>Empowering</h6>
+            <h2>Smart Solutions for</h2>
+            <p>
+              Stay connected, organized, and productive with our cutting-edge
+              smart technology.
+            </p>
+            <button type="button" class="btn btn-light me-2">Learn More</button>
+            <button type="button" class="btn btn-outline-light">Log In</button>
+          </div>
+          <div
+            class="col-md-6 d-flex justify-content-center align-items-center"
+          >
+            <img
+              src="./asset/img/manjeeza.png"
+              class="img-fluid"
+              alt="Hero Section Image"
+            />
           </div>
         </div>
       </div>
     </div>
-    <!-- details 2nd section -->
+    <!-- service 2nd section -->
+    <div class="container-fluid mt-4">
+      <div class="row d-flex justify-content-center">
+        <div class="col-md-7">
+          <p style="text-align: center">Innovative</p>
+          <h1 style="text-align: center">
+            Comprehensive Solutions for <br />
+            Your Branding, IT, and Printing Needs
+          </h1>
+          <p style="text-align: center; line-height: 28px">
+            At Manjithaaza, we offer a wide range of services to meet your
+            branding, IT, and printing <br> requirements. Our team of experts is
+            dedicated to delivering innovative solutions that help you <br> stand out
+            in the digital world.
+          </p>
+        </div>
+      </div>
+    </div>
+    <!-- service 3rd section -->
+    <div class="container-fluid mt-3">
+      <div class="row d-flex justify-content-around">
+        <div class="about-us-card col-md-3 p-5">
+          <i class="bi bi-box"></i>
+          <h2>Branding Solutions</h2>
+          <h6>
+            We provide strategic branding solutions to enhance your brand's
+            visibility and reputation. From logo design to brand strategy, we've
+            got you covered.
+          </h6>
+        </div>
+        <div class="about-us-card col-md-3 p-5">
+          <i class="bi bi-box"></i>
+          <h2>IT Solutions</h2>
+          <h6>
+            Our IT solutions are tailored to meet your specific business needs.
+            Whether you need software development, cloud services, or IT
+            consulting, we have the expertise to help you succeed.
+          </h6>
+        </div>
+        <div class="about-us-card col-md-3 p-5">
+          <i class="bi bi-box"></i>
+          <h2>Printing Solutions</h2>
+          <h6>
+            From business cards to brochures, our printing solutions are
+            designed to make a lasting impression. We offer high-quality
+            printing services that showcase your brand in the best possible way.
+          </h6>
+        </div>
+      </div>
+    </div>
+    <!-- service 4th section -->
+    <div class="d-flex align-items-center justify-content-center">
+      <button
+        type="button"
+        class="btn btn-outline-light justify-content-center pt-2 px-2 mt-3"
+      >
+        Get Started
+      </button>
+      <p class="px-2" style="margin-top: 30px">
+        Learn More
+        <i class="bi bi-caret-right"></i>
+      </p>
+    </div>
+    <!-- service 5th section -->
     <div>
       <div class="container-fluid mt-3">
         <div class="row">
@@ -108,35 +172,26 @@
             class="col-md-6 p-5 d-flex justify-content-center"
             style="flex-direction: column"
           >
-            <h6>Customize</h6>
-            <h2>EDesign Your Own Prime Smart Card</h2>
-            <div class="row"></div>
-          </div>
-          <div
-            class="col-md-6 p-5 d-flex justify-content-center"
-            style="flex-direction: column"
-          >
+            <h6>Innovate</h6>
+            <h2>Branding Solutions that Make Your Business Stand Out</h2>
             <h6>
-              With our Smart Card online design feature, you can easily
-              customize your Prime card to reflect your unique style and
-              personal brand. Stand out from the crowd with a card that is as
-              smart as you are.
+              Our branding solutions are designed to help your business create a
+              strong and memorable brand identity. From logo design to brand
+              strategy and marketing materials, we have you covered.
             </h6>
             <div class="row">
               <div class="col-md-6">
-                <i class="bi bi-box"></i>
-                <h5>Easy Design</h5>
+                <h5>Logo Design</h5>
                 <h6>
-                  Use our intuitive design tools to create a card that
-                  represents your personality.
+                  Our expert designers will create a unique and professional
+                  logo that represents your brand.
                 </h6>
               </div>
               <div class="col-md-6">
-                <i class="bi bi-box"></i>
-                <h5>High Quality</h5>
+                <h5>Brand Strategy</h5>
                 <h6>
-                  Our Prime cards are printed on premium materials for a
-                  professional and polished look.
+                  We'll develop a comprehensive brand strategy to position your
+                  business for success.
                 </h6>
               </div>
             </div>
@@ -145,28 +200,25 @@
                 type="button"
                 class="btn btn-outline-light justify-content-le pt-2 px-2 mt-3"
               >
-                Get Started
+                Learn More
               </button>
               <p class="px-2" style="margin-top: 30px">
-                Learn More
+                Get Started
                 <i class="bi bi-caret-right"></i>
               </p>
             </div>
           </div>
+          <div class="col-md-6 p-5">
+            <img
+              src="./asset/img/about_pic1.png"
+              class="img-fluid"
+              alt="Hero Section Image"
+            />
+          </div>
         </div>
       </div>
     </div>
-    <!-- details 3rd section -->
-    <div>
-      <div class="d-flex justify-content-center align-items-center">
-        <img
-          src="./asset/img/card.png"
-          class="img-fluid"
-          alt="Hero Section Image"
-        />
-      </div>
-    </div>
-    <!-- details 4th section -->
+    <!-- service 6th section -->
     <div>
       <div class="container-fluid mt-3">
         <div class="row">
@@ -175,24 +227,27 @@
             style="flex-direction: column"
           >
             <h2>
-              Go Green with the Prime Smart Card: A Sustainable and Stylish
-              Solution
+              Empowering Businesses with Cutting-Edge IT Solutions for Success
             </h2>
             <h6>
-              The Prime Smart Card is designed with environmental sustainability
-              in mind, offering a greener alternative to traditional business
-              cards. Made from recycled materials, it reduces waste and promotes
-              eco-friendly practices.
+              At Manjithaaza, we offer a comprehensive range of IT solutions
+              including software development, network setup, and cybersecurity.
+              Our team of experts is dedicated to providing innovative and
+              reliable solutions that help businesses thrive in the digital age.
             </h6>
             <div class="row">
               <div class="col-md-6">
-                <h2>50%</h2>
-                <h6>Recycled materials for a greener planet</h6>
+                <h5>Software Development</h5>
+                <h6>
+                  Customized software solutions tailored to meet your unique
+                  business needs and goals.
+                </h6>
               </div>
               <div class="col-md-6">
-                <h2>50%</h2>
+                <h5>Network Setup</h5>
                 <h6>
-                  Promote sustainability while making a lasting impression
+                  Efficient and secure network setup to ensure seamless
+                  connectivity and data protection.
                 </h6>
               </div>
             </div>
@@ -207,7 +262,7 @@
         </div>
       </div>
     </div>
-    <!-- details 5th section -->
+    <!-- service 7th section -->
     <div>
       <div class="container-fluid mt-3">
         <div class="row">
@@ -215,21 +270,45 @@
             class="col-md-6 p-5 d-flex justify-content-center"
             style="flex-direction: column"
           >
-            <i class="bi bi-box"></i>
-            <h2>Cost-Effective Solution for Smart Professionals and Youth</h2>
+            <h2>
+              Enhance your brand with our high-quality printing solutions for
+              business cards, brochures, and promotional materials.
+            </h2>
             <h6>
-              The Prime Smart Card offers a cost-effective solution for smart
-              professionals and youth, allowing them to easily share their
-              contact information in a convenient and efficient manner. With its
-              sleek design and advanced NFC technology, it is the perfect tool
-              for staying connected in today's digital world.
+              Our printing solutions offer professional designs and fast
+              turnaround times, ensuring your materials leave a lasting
+              impression.
+            </h6>
+          </div>
+          <div class="col-md-6 p-5">
+            <img
+              src="./asset/img/about_pic1.png"
+              class="img-fluid"
+              alt="Hero Section Image"
+            />
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- service 8th section -->
+    <div>
+      <div class="container-fluid mt-3">
+        <div class="row">
+          <div
+            class="col-md-6 p-5 d-flex justify-content-center"
+            style="flex-direction: column"
+          >
+            <h2>Get a Custom Quote Today</h2>
+            <h6>
+              Contact us to discuss your specific needs and receive a
+              personalized quote.
             </h6>
             <div class="d-flex align-items-center">
               <button
                 type="button"
                 class="btn btn-outline-light justify-content-le pt-2 px-2 mt-3"
               >
-                Get Started
+                Contact
               </button>
               <p class="px-2" style="margin-top: 30px">
                 Learn More
@@ -247,14 +326,15 @@
         </div>
       </div>
     </div>
-    <!-- details 5th section -->
+    <!-- service 9th section -->
     <div>
-      <div class="d-flex justify-content-center align-items-center">
-        <img
-          src="./asset/img/card.png"
-          class="img-fluid"
-          alt="Hero Section Image"
-        />
+      <div class="container-fluid mt-3">
+        <div class="row hero-section align-items-center">
+          <div class="col-md-6" style="padding-left: 20px">
+            <h2>Satisfied Customers</h2>
+            <h6>Hear what our clients have to say about our services</h6>
+          </div>
+        </div>
       </div>
     </div>
     <!-- footer -->
